root/ingress/https/ingress-https-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-https-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - https.example.com
    secretName: ingress-https-secret
  rules:
  - host: https.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ingress-https-svc
          servicePort: 443
